Wired up adding of new summoners, games. a lot.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,8 +29,7 @@
                                 asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
-                                asp-action="Summoner">Summoners</a>
+                            <input id="summoner_input" placeholder="Search...">
                         </li>
                     </ul>
                 </div>
