new pub files, package.json

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                                 asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home"
+                                asp-action="Leaderboard">Leaderboard</a>
+                        </li>
+                        <li class="nav-item">
                             <input id="summoner_input" placeholder="Search...">
                         </li>
                     </ul>
